--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,106 @@
+@import url('https://fonts.cdnfonts.com/css/digital-numbers');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:regular,bold,light,ital&subset=Latin');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* Variables */
+  --fond: #F0F3F5;
+  --texte: #163646;
+  --primary: #00699E;
+  --accent2: #9ABBCB;
+  --accent3: #265D78;
+  --white-gradient: linear-gradient(#e5e5e5, #cecdcd);
+  --success: #2FBC30;
+  --warning: #BC7E15;
+  --error: #BD1E1B;
+  --border-radius: 10px;
+  --drop-shadow: 12px 12px 12px 0px rgba(0, 0, 0, 0.25);
+
+
+  min-height: 100vh;
+  min-width: 100vw;
+  margin: 0;
+  padding: 0;
+  background: var(--white-gradient);
+
+  font-family: Ubuntu, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  font-weight: 500;
+  font-size: 14px;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+/* * {
+  box-sizing: border-box;
+} */
+
 
 body {
   margin: 0;
+}
+
+.title {
+  color: #fdfdfd;
+  background-color: var(--accent3);
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 36.77px;
+  border-radius: var(--border-radius);
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  width: 720px;
+  height: 100px;
+  margin: auto;
+}
+
+
+.background-success {
+  background-color: var(--success)
+}
+
+.background-warning {
+  background-color: var(--warning)
+}
+
+.background-error {
+  background-color: var(--error)
+}
+
+.card {
+  position: relative;
+  background-color: var(--accent2);
+  border-radius: 60px;
+  /* box-shadow: 12px 12px 12px 0px rgba(0, 0, 0, 0.25); */
+  box-shadow: var(--drop-shadow);
+  margin: 0 150px;
+  padding: 25px 50px;
+  font-size: 20px;
+  /* overflow: scroll;
+  scrollbar-color: var(--texte) #d4e5ee;
+  scrollbar-width: thin; */
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.smaller {
+  font-size: 15px;
+}
+
+.light-italic {
+  font-weight: 300;
+  /* font-weight: lighter; */
+  font-style: italic;
+}
+
+.color-error {
+  color: #BD1E1B;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  font-size: 35px;
 }
