--- a/src/index.css
+++ b/src/index.css
@@ -70,10 +70,10 @@ body {
 }
 
 .card {
+  width: 1170px;
   position: relative;
   background-color: var(--accent2);
   border-radius: 60px;
-  /* box-shadow: 12px 12px 12px 0px rgba(0, 0, 0, 0.25); */
   box-shadow: var(--drop-shadow);
   margin: 0 150px;
   padding: 25px 50px;
