--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ body {
   background-color: var(--accent2);
   border-radius: 60px;
   box-shadow: var(--drop-shadow);
-  margin: 0 150px;
+  margin: auto;
   padding: 25px 50px;
   font-size: 20px;
   /* overflow: scroll;
